--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+<meta charset="utf-8" />
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Welcome to Spring Boot Chat Application</title>
+    <title>Chào mừng đến với ứng dụng chat trực tuyến</title>
     <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
@@ -12,13 +13,13 @@
 
 <div id="username-page">
     <div class="username-page-container">
-        <h1 class="title">Enter your username</h1>
+        <h1 class="title">Nhập tên của bạn</h1>
         <form id="usernameForm" name="usernameForm">
             <div class="form-group">
-                <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" />
+                <input type="text" id="name" placeholder="Tên của bạn" autocomplete="off" class="form-control" />
             </div>
             <div class="form-group">
-                <button type="submit" class="accent username-submit">Start Chatting</button>
+                <button type="submit" class="accent username-submit">Bắt đầu trò chuyện</button>
             </div>
         </form>
     </div>
@@ -27,10 +28,10 @@
 <div id="chat-page" class="hidden">
     <div class="chat-container">
         <div class="chat-header">
-            <h2>Welcome to Spring Boot Chat Application</h2>
+            <h2>Chào mừng đến với ứng dụng chat trực tuyến</h2>
         </div>
         <div class="connecting">
-            Connecting...
+            Đang kết nối...
         </div>
         <ul id="messageArea">
 
@@ -38,8 +39,8 @@
         <form id="messageForm" name="messageForm">
             <div class="form-group">
                 <div class="input-group clearfix">
-                    <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
-                    <button type="submit" class="primary">Send</button>
+                    <input type="text" id="message" placeholder="Nhập tin nhắn..." autocomplete="off" class="form-control"/>
+                    <button type="submit" class="primary">Gửi</button>
                 </div>
             </div>
         </form>
